ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iot-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "false"
spec:
  rules:
  - host: awesome.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-service 
            port:
              number: 80
